// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly InputBar 1`] = `
<View
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "paddingHorizontal": 12,
        "paddingTop": 4,
        "position": "absolute",
        "right": 0,
      },
      undefined,
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <LinearGradient
    colors={
      [
        "rgba(255, 255, 255, 0)",
        "rgba(255, 255, 255, 0.9)",
      ]
    }
    end={
      {
        "x": 0,
        "y": 1,
      }
    }
    pointerEvents="none"
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "height": 10,
        "left": -12,
        "position": "absolute",
        "right": -12,
        "top": -10,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "flexDirection": "row",
          "minHeight": 42,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#e1e1e1",
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
        }
      }
    />
    <TextInput
      multiline={true}
      onChangeText={[Function]}
      placeholder="components.inputBar.placeholder"
      placeholderTextColor="#999"
      style={
        [
          {
            "flex": 1,
            "fontSize": 16,
            "maxHeight": 100,
            "paddingRight": 6,
            "paddingTop": -4,
          },
          {
            "color": "#000000",
          },
        ]
      }
      value=""
    />
    <IconButton
      backgroundColor="#b0c1cb"
      color="#FFFFFF"
      icon={
        {
          "androidIconName": "arrow_upward",
          "iosIconName": "arrow.up",
        }
      }
      onPress={[Function]}
      size={20}
    />
  </View>
</View>
`;

exports[`renders correctly InputBar when streaming 1`] = `
<View
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "paddingHorizontal": 12,
        "paddingTop": 4,
        "position": "absolute",
        "right": 0,
      },
      undefined,
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <LinearGradient
    colors={
      [
        "rgba(255, 255, 255, 0)",
        "rgba(255, 255, 255, 0.9)",
      ]
    }
    end={
      {
        "x": 0,
        "y": 1,
      }
    }
    pointerEvents="none"
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "height": 10,
        "left": -12,
        "position": "absolute",
        "right": -12,
        "top": -10,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "flexDirection": "row",
          "minHeight": 42,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#e1e1e1",
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
        }
      }
    />
    <TextInput
      multiline={true}
      onChangeText={[Function]}
      placeholder="components.inputBar.placeholder"
      placeholderTextColor="#999"
      style={
        [
          {
            "flex": 1,
            "fontSize": 16,
            "maxHeight": 100,
            "paddingRight": 6,
            "paddingTop": -4,
          },
          {
            "color": "#000000",
          },
        ]
      }
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <PlatformIcon
        androidIconName="stop_circle"
        color="#f9342a"
        iosIconName="stop.circle"
        size={28}
      />
    </View>
  </View>
</View>
`;

exports[`renders correctly InputBar with value 1`] = `
<View
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "paddingHorizontal": 12,
        "paddingTop": 4,
        "position": "absolute",
        "right": 0,
      },
      undefined,
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <LinearGradient
    colors={
      [
        "rgba(255, 255, 255, 0)",
        "rgba(255, 255, 255, 0.9)",
      ]
    }
    end={
      {
        "x": 0,
        "y": 1,
      }
    }
    pointerEvents="none"
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "height": 10,
        "left": -12,
        "position": "absolute",
        "right": -12,
        "top": -10,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "flexDirection": "row",
          "minHeight": 42,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#e1e1e1",
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
        }
      }
    />
    <TextInput
      multiline={true}
      onChangeText={[Function]}
      placeholder="components.inputBar.placeholder"
      placeholderTextColor="#999"
      style={
        [
          {
            "flex": 1,
            "fontSize": 16,
            "maxHeight": 100,
            "paddingRight": 6,
            "paddingTop": -4,
          },
          {
            "color": "#000000",
          },
        ]
      }
      value="Type here"
    />
    <IconButton
      backgroundColor="#628395"
      color="#FFFFFF"
      icon={
        {
          "androidIconName": "arrow_upward",
          "iosIconName": "arrow.up",
        }
      }
      onPress={[Function]}
      size={20}
    />
  </View>
</View>
`;

exports[`renders the collapsed + toggle when attachments are enabled 1`] = `
<View
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "paddingHorizontal": 12,
        "paddingTop": 4,
        "position": "absolute",
        "right": 0,
      },
      undefined,
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <LinearGradient
    colors={
      [
        "rgba(255, 255, 255, 0)",
        "rgba(255, 255, 255, 0.9)",
      ]
    }
    end={
      {
        "x": 0,
        "y": 1,
      }
    }
    pointerEvents="none"
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "height": 10,
        "left": -12,
        "position": "absolute",
        "right": -12,
        "top": -10,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "flexDirection": "row",
          "minHeight": 42,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#e1e1e1",
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
      >
        <IconButton
          accessibilityLabel="components.inputBar.attach"
          backgroundColor="#ebebeb"
          color="#000000"
          icon={
            {
              "androidIconName": "add",
              "iosIconName": "plus",
            }
          }
          onPress={[Function]}
          size={20}
        />
      </View>
    </View>
    <TextInput
      multiline={true}
      onChangeText={[Function]}
      placeholder="components.inputBar.placeholder"
      placeholderTextColor="#999"
      style={
        [
          {
            "flex": 1,
            "fontSize": 16,
            "maxHeight": 100,
            "paddingRight": 6,
            "paddingTop": -4,
          },
          {
            "color": "#000000",
          },
        ]
      }
      value=""
    />
    <IconButton
      backgroundColor="#b0c1cb"
      color="#FFFFFF"
      icon={
        {
          "androidIconName": "arrow_upward",
          "iosIconName": "arrow.up",
        }
      }
      onPress={[Function]}
      size={20}
    />
  </View>
</View>
`;
